# ot-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: changelog.md  tyokirjanpito.md  vaatimusmaarittely.md
harjoitustyo/: pyproject.toml
hiragana-app/: .coverage  .gitignore  pyproject.toml  scoreboard.db  tasks.py
hiragana-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  tyokirjanpito.md  vaatimusmaarittely.md
hiragana-app/src/: index.py
hiragana-app/src/database/: make_database.py
hiragana-app/src/logic/: answers.py  hiragana_pictures.py
hiragana-app/src/objects/: button_rect.py  buttons.py  rect.py
hiragana-app/src/tests/: buttons_test.py  hiraganas_test.py  user_input_test.py
hiragana-app/src/ui/: button_ui.py  game_menu_screen.py  game_screen.py  hiragana.py  make_rect.py  menu_screen_ui.py  scoreboard_screen.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/unicafe/: .gitignore
seurapeli/: .env  card.py  card_deck.py  changes_card_deck.py  draw_rect.py  guess.py  input.py  korttipakka.py  main1.py  pyproject.toml  score.py  tasks.py
seurapeli/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyokirjanpito.md  vaatimusmaarittely.md
seurapeli/src/: card_deck.py  deck_of_cards.py  draw_rect.py  flip_side.py  guess.py  korttipakka.py  main_game_loop.py  rects.py  score.py
seurapeli/src/services/: card_deck.py  deck_of_cards.py  flip_side.py  score.py  set_starting_score.py  write_to_file.py
seurapeli/src/tests/: .sekoitettu_pakka_test.py.swp  (+3 more)
(+23 files in other folders)
